// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when there are multiple items 1`] = `
<div>
  <h4>
    Rice
  </h4>
  <h4>
    Pulses
  </h4>
  <h4>
    Wheat
  </h4>
</div>
`;

exports[`render when there are no items 1`] = `
<div>
  No items Found
</div>
`;

exports[`render when there is one item 1`] = `
<div>
  <h4>
    Rice
  </h4>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  No items Found
</div>
`;
